fix button alignment

--- a/app/javascript/components/button.module.scss
+++ b/app/javascript/components/button.module.scss
@@ -1,5 +1,6 @@
 .unstyled {
     font: inherit;
+    text-align: left;
     border-style: none;
     background: transparent;
     border: 0 none;
